[project]
name = "lanpartydb-website"
version = "0.1.0"
description = "Website generator for the OrgaTalk LAN Party Database"
readme = "README.md"
authors = [
    { name = "Jochen Kupperschmidt", email = "homework@nwsnet.de" }
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.3",
    "flask-babel>=4.0.0",
    "flask-paginate>=2024.04.12",
    "frozen-flask>=1.0.2",
    "lanpartydb>=0.8.0",
    "pycountry>=24.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lanpartydb_website"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
forced-separate = [ "tests" ]
lines-after-imports = 2
order-by-type = false
