[project]
name = "lanpartydb-website"
version = "0.1.0"
description = "Website generator for the OrgaTalk LAN Party Database"
readme = "README.md"
authors = [
    { name = "Jochen Kupperschmidt", email = "homework@nwsnet.de" }
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.3",
    "flask-babel>=4.0.0",
    "flask-paginate>=2024.04.12",
    "frozen-flask>=1.0.2",
    "lanpartydb>=0.8.0",
    "pycountry>=24.6.1",
]
license = { text = "MIT" }
keywords = [ "lanparty" ]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/orgatalk/lanpartydb-website"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
forced-separate = [ "tests" ]
lines-after-imports = 2
order-by-type = false
